--- a/src/app/features/first-login/email-verification/email-verification.component.html
+++ b/src/app/features/first-login/email-verification/email-verification.component.html
@@ -24,7 +24,7 @@
           <span>Can’t find the email?</span>
         </div>
         <div class="col-md-12 main-color text-center p-t-20">
-          <span>Resend the email</span>
+          <a href="javascript:void(0)" (click)="resendEmail()" class="cursor main-color">Resend the email</a>
         </div>
       </div>
     </div>
