--- a/src/app/features/auth/forgot-password/forgot-password.component.html
+++ b/src/app/features/auth/forgot-password/forgot-password.component.html
@@ -11,7 +11,13 @@
         <img src="../../../assets/images/loginLogo.png" alt="BuildSupply" class="logo-img mb-4 mt-4" />
         <div *ngIf="phonescreenShow">
           <div class="heading-forget">Forgot Your Password</div>
-          <div class="heading-des-forget">Enter your registered mobile number and we will send you OTP to change your password.</div>
+          <div class="heading-des-forget">
+            {{
+              this.callingCode === "+91"
+                ? "Enter your registered mobile number and we will send you OTP to change your password."
+                : "Enter your email address and we will send an email to change password."
+            }}
+          </div>
         </div>
 
         <div *ngIf="OtpscreenShow && !verifiedMobile">
@@ -33,7 +39,7 @@
         <form *ngIf="forgetPassForm" [formGroup]="forgetPassForm" class="forget-pass-form">
           <ng-container *ngIf="phonescreenShow">
             <div class="row" *ngIf="phonescreenShow">
-              <div class="col-xs-4">
+              <div *ngIf="this.callingCode === '+91'" class="col-xs-4">
                 <mat-form-field class="border-select width100Percent p-t-5 mat-form-field-arrow-padding mat-form-field-infix-padding mat-form-field-flex-mm-padding">
                   <mat-select formControlName="countryCode">
                     <div class="display-flex">
@@ -67,7 +73,7 @@
                   </mat-select>
                 </mat-form-field>
               </div>
-              <div class="col-xs-8">
+              <div *ngIf="this.callingCode === '+91'" class="col-xs-8">
                 <mat-form-field class="border-input display-flex">
                   <input
                     matInput
@@ -86,6 +92,20 @@
                   >
                 </mat-form-field>
               </div>
+              <div *ngIf="callingCode !== '+91'" class="col-xs-12">
+                <mat-form-field class="border-input width-100">
+                  <input matInput type="email" formControlName="email" (input)="verifyEmail($event)" placeholder="Email" />
+                  <small *ngIf="forgetPassForm.controls['email'].hasError('required') && forgetPassForm.controls['email'].touched" class="signupForm-error-msg">
+                    Email is required
+                  </small>
+                  <small *ngIf="forgetPassForm.controls['email'].hasError('pattern') && forgetPassForm.controls['email'].touched" class="signupForm-error-msg">
+                    Enter Valid Email</small
+                  >
+                  <small *ngIf="emailSendMessage">
+                    Check Your Email To Change Password
+                  </small>
+                </mat-form-field>
+              </div>
             </div>
 
             <div mat-dialog-actions class="col-xs-12 p-t-40">
@@ -94,7 +114,7 @@
                 class="main-background-color main-button color-white m-b-5"
                 cdkFocusInitial
                 style="width: 100%;"
-                [disabled]="verifiedMobile"
+                [disabled]="this.callingCode === '+91' ? verifiedMobile : !emailVerified"
                 (click)="submitNumber()"
               >
                 Submit
