navbar in sidebar of page with common component

--- a/src/app/features/app-dashboard/app-dashboard.component.html
+++ b/src/app/features/app-dashboard/app-dashboard.component.html
@@ -1,9 +1,9 @@
 <div class="dashboard app-dashboard">
   <div class="container-fluid bg-gray pl-0 pr-3">
     <div class="row">
-      <sidebar-navigation (collapseMenu)="isSidebarCollapsed($event)"></sidebar-navigation>
-      
-      <div class="col-md-12" [class.changeWidth]="isSideNavCollapsed">
+      <!-- <sidebar-navigation (collapseMenu)="isSidebarCollapsed($event)"></sidebar-navigation> -->
+      <!-- [class.changeWidth]="isSideNavCollapsed" -->
+      <div class="col-md-12 changeWidth">
         <div class="row">
           <div class="col-sm-12 pl-3">
             <app-breadcrumb></app-breadcrumb>
