--- a/src/app/features/auth/change-password/change-password.component.html
+++ b/src/app/features/auth/change-password/change-password.component.html
@@ -1,4 +1,4 @@
-<div class="page-start-point">
+<div class="page-start-point changeWidth mt-5 pt-4">
   <div class="p-b-20 min-height parent">
     <div class="row m-0">
       <div class="col-md-7 ">
