--- a/src/app/features/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <!-- <fix-header></fix-header> -->
-<div class="page-start-point">
+<div class="page-start-point changeWidth mt-5 pt-4">
   <div *ngIf="!allProjects || (allProjects && allProjects.length == 0)" class="parent p-t-20 min-height">
     <div class="p-l-20 p-r-20 p-b-20 min-height parent wrapper-btn-center">
       <div class="add-user-img">
