--- a/src/app/features/po/view-grn/view-grn.component.html
+++ b/src/app/features/po/view-grn/view-grn.component.html
@@ -1,4 +1,4 @@
-<div class="page-start-point">
+<div class="page-start-point changeWidth mt-5 pt-4">
   <div class="p-b-20 grn-dashboard min-height parent">
     <div class="row p-t-20">
       <!-- <div class="col-xs-6">PO Number: {{grnHeaders[0].poNumber}}</div> -->
