--- a/src/app/features/rfq/rfq-view/rfq-view.component.html
+++ b/src/app/features/rfq/rfq-view/rfq-view.component.html
@@ -1,6 +1,6 @@
 <!-- <fix-header></fix-header> -->
 
-<div class="page-start-point" *ngIf="rfqDetails">
+<div class="page-start-point changeWidth mt-5 pt-4" *ngIf="rfqDetails">
   <div class="create-po-dashboard p-b-20 min-height parent">
     <div class="row m-b-10">
       <div class="col-md-12">
