--- a/src/app/features/my-material/my-material.component.html
+++ b/src/app/features/my-material/my-material.component.html
@@ -1,4 +1,4 @@
-<div class="page-start-point">
+<div class="page-start-point changeWidth mt-5 pt-4">
   <div class="p-l-20 p-r-20 p-b-20 min-height">
     <div class="p-t-10">
       <mat-card class="parent">
