--- a/src/app/features/po/po-detail-list/po-detail-list.component.html
+++ b/src/app/features/po/po-detail-list/po-detail-list.component.html
@@ -1,4 +1,4 @@
-<div class="page-start-point">
+<div class="page-start-point changeWidth mt-5 pt-4">
   <div *ngIf="!poApprovalDetailsTemp && !poDraftedDetailsTemp && !acceptedRejectedPOListTemp">
     <div class="p-l-20 p-r-20 p-b-20 min-height parent wrapper-btn-center">
       <div class="add-user-img">
