--- a/src/app/features/rfq/review/review.component.html
+++ b/src/app/features/rfq/review/review.component.html
@@ -1,5 +1,5 @@
 <form *ngIf="finalRfq" [formGroup]="form" (ngSubmit)="submit()">
-  <div class="page-start-point">
+  <div class="page-start-point changeWidth mt-5 pt-4">
     <div class="p-l-20 p-r-20 p-b-20 min-height parent">
       <div class="row m-b-10">
         <div class="col-md-12">
