--- a/src/app/features/supplier/supplier-details/supplier-details.component.html
+++ b/src/app/features/supplier/supplier-details/supplier-details.component.html
@@ -1,4 +1,4 @@
-<div class="page-start-point">
+<div class="page-start-point changeWidth mt-5 pt-4">
 
   <ng-container *ngIf="(dataSourceTemp == null) ||  (dataSourceTemp == []) || dataSourceTemp.length==0 ">
       <div class="p-l-20 p-r-20 p-b-20 min-height parent wrapper-btn-center">
