--- a/src/app/shared/layout/main-layout/main-layout.component.html
+++ b/src/app/shared/layout/main-layout/main-layout.component.html
@@ -14,7 +14,7 @@
   </mat-sidenav>
   <mat-sidenav-content>
     <app-header #header [menu]="sidenav"></app-header>
-
+    <sidebar-navigation (collapseMenu)="isSidebarCollapsed($event)"></sidebar-navigation>
     <router-outlet> </router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
