--- a/src/assets/scss/pages/users.scss
+++ b/src/assets/scss/pages/users.scss
@@ -109,10 +109,12 @@
    white-space: pre-line;
 }
 .add-user-container {
+  .mat-header-cell{
+    z-index: 9 !important;
+  }
   .project-user-details-width {
    max-width: 400px;
    min-width: 400px !important;
-  //overflow-x: auto !important;
 }
     .edit-disable-user-details-width {
       min-width: 100px;
