--- a/src/app/features/app-dashboard/app-dashboard.component.html
+++ b/src/app/features/app-dashboard/app-dashboard.component.html
@@ -2,18 +2,18 @@
   <div class="container-fluid bg-gray">
     <div class="row">
       <div class="col-sm-12 col-md-9">
-        <div class="things-to-do bg-white mb-4 equal-height">
+        <div class="things-to-do bg-white mb-4 equal-height sml-d1">
           <!-- <h5 class="mb-3">Things to do</h5> -->
-          <div class="things-to-do__inner d-flex justify-content-between align-items-center">
-            <div *ngIf="permissionObj.rfqFlag" class="things-to-do__icons text-center cursor" (click)="openProject()"
-              matTooltip="You can add your project details">
+          <div class="things-to-do__inner d-flex justify-content-between align-items-center sml-db">
+            <div *ngIf="permissionObj.rfqFlag" class="things-to-do__icons text-center cursor mr-2"
+              (click)="openProject()" matTooltip="You can add your project details">
               <div class="things-to-do__img add-project-img">
                 <img src="../../../assets/images/Add-Project.png" alt="" class="img-fluid" />
               </div>
               <h6 class="mb-0">Add Project</h6>
             </div>
 
-            <div class="things-to-do__icons text-center cursor" (click)="openBomDialog()"
+            <div class="things-to-do__icons text-center cursor  mr-2" (click)="openBomDialog()"
               matTooltip="You can create your BOM of materials">
               <div class="things-to-do__img">
                 <img src="../../../assets/images/BOM.png" alt="" class="img-fluid" />
@@ -29,7 +29,7 @@
               <h6 class="mb-0">Create RFQ</h6>
             </div>
 
-            <div *ngIf="permissionObj.rfqFlag" class="things-to-do__icons text-center cursor"
+            <div *ngIf="permissionObj.rfqFlag" class="things-to-do__icons text-center cursor  mr-2"
               [routerLink]="['/globalStore/' + orgId]" matTooltip="You can check your material details">
               <div class="things-to-do__img">
                 <img src="../../../assets/images/global-store.png" alt="Global Store" class="img-fluid" />
@@ -56,8 +56,9 @@
 
         <div class="statistics bg-white p-20 p-r-0 mb-4">
           <div class="row">
-            <div class="col-xs-7 p-r-0 p-l-0">
-              <mat-tab-group class="mat-tabs-button" (selectedTabChange)="onTabChanged($event)">
+            <div class="col-xs-12 col-md-7 p-r-0 p-l-0" [ngClass]="isMobile ? 'order-last' : '' ">
+              <mat-tab-group class="mat-tabs-button" (selectedTabChange)="onTabChanged($event)"
+                [ngClass]="isMobile ? 'mt-0' : 'mt-1' ">
                 <mat-tab label="{{ tab1 }}" *ngIf="permissionObj.rfqFlag && poData">
                   <div class="statistics__purchase-order d-flex">
                     <div class="statistics__tile stats mr-3">
@@ -150,7 +151,7 @@
               </mat-tab-group>
             </div>
 
-            <div class="col-xs-2 p-l-25 p-r-0">
+            <div class="col-xs-6 col-md-2 p-l-25 p-r-0">
               <form [formGroup]="filterForm">
                 <mat-form-field class="border-select select-project width103Percent mat-form-field-flex-mm-padding">
                   <mat-label>Select Project</mat-label>
@@ -168,7 +169,8 @@
                 </mat-form-field>
               </form>
             </div>
-            <div class="col-xs-3 p-r-0 p-l-20 widthWrapper customDatePicker">
+            <div class="col-xs-6 col-md-3 p-r-0 customDatePicker"
+              [ngClass]="isMobile ? 'pl-0 wdrpr-mb' : 'p-l-20 widthWrapper' ">
               <ngx-mat-drp class="border-input" (selectedDateRangeChanged)="updateRange($event)" [options]="options"
                 #dateRangePicker></ngx-mat-drp>
             </div>
