--- a/src/app/features/auth/sign-in-sign-up/sign-in-sign-up.component.html
+++ b/src/app/features/auth/sign-in-sign-up/sign-in-sign-up.component.html
@@ -15,13 +15,13 @@
         <mat-tab-group class="tab-signin-up" [selectedIndex]="index" (selectedTabChange)="tabChanged($event)">
           <mat-tab label="Sign In">
             <div>
-              <signin [callingCode]="callingCode"></signin>
+              <signin [countryCode]="countryCode" [callingCode]="callingCode"></signin>
             </div>
           </mat-tab>
 
           <mat-tab label="Sign Up">
             <div>
-              <signup [callingCode]="callingCode"></signup>
+              <signup [countryCode]="countryCode" [callingCode]="callingCode"></signup>
             </div>
           </mat-tab>
         </mat-tab-group>
