--- a/src/app/features/first-login/email-verification/email-verification.component.html
+++ b/src/app/features/first-login/email-verification/email-verification.component.html
@@ -1,4 +1,4 @@
-<section class="update-info add-user flex-center">
+<section class="update-info height-86 flex-center">
   <div class="container text-webkit-center">
     <div class="row background-white-color border-radius-10 p-20 mt-5 width-60">
       <div class="col-md-12 text-center">
