--- a/src/assets/scss/pages/common.scss
+++ b/src/assets/scss/pages/common.scss
@@ -276,9 +276,10 @@ div.limited-character.universal {
     font-weight: normal;
     text-align: right;
   }
-  span, strong{
-    padding-left: .25rem;
-    padding-right: .25rem;
+  span,
+  strong {
+    padding-left: 0.25rem;
+    padding-right: 0.25rem;
   }
 }
 .slideToggalColor {
@@ -296,67 +297,67 @@ div.limited-character.universal {
   right: 0;
 }
 
-.lh30{
-  input{
+.lh30 {
+  input {
     line-height: 30px;
   }
 }
 
-.main-flex{
+.main-flex {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -moz-box-orient: vertical;
   -moz-box-direction: normal;
   flex-direction: row;
-  & > div{
+  & > div {
     -webkit-box-flex: 1;
-  -webkit-flex: 1;
-  -moz-box-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
-  display: flex;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-  -moz-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -moz-box-orient: vertical;
-  -moz-box-direction: normal;
-  flex-direction: row;
+    -webkit-flex: 1;
+    -moz-box-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
+    display: flex;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -moz-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -moz-box-orient: vertical;
+    -moz-box-direction: normal;
+    flex-direction: row;
   }
 }
 
-@media only screen and (max-width : 600px){
-  .res-table{
+@media only screen and (max-width: 600px) {
+  .res-table {
     overflow-x: auto;
     display: flex;
-    section{
+    section {
       display: inline-flex !important;
-      span{
-        display:contents !important;
+      span {
+        display: contents !important;
         font-size: 10px;
       }
     }
-    .mat-expansion-panel{
+    .mat-expansion-panel {
       display: grid !important;
       width: 100%;
     }
   }
-  .res-td{
+  .res-td {
     display: inline-table;
     width: max-content;
-    span{
+    span {
       font-size: 10px;
     }
   }
-  .mat-table .mat-cell{
-    height:auto;
+  .mat-table .mat-cell {
+    height: auto;
     margin-top: auto;
   }
-  .mat-expansion-panel-header{
+  .mat-expansion-panel-header {
     min-height: auto !important;
     height: auto !important;
     max-height: auto !important;
@@ -364,50 +365,49 @@ div.limited-character.universal {
   // .mat-expansion-indicator{
   //   margin-top: -50px;
   // }
-  .fr-row{
+  .fr-row {
     text-align: left;
     width: auto;
     overflow: visible;
   }
 }
 
-
-
-@media only screen and (max-width : 600px){
-  .res-table{
+@media only screen and (max-width: 600px) {
+  .res-table {
     overflow-x: auto;
     display: flex;
-    section{
+    section {
       display: inline-flex !important;
-      span{
+      span {
         font-size: 10px;
         padding-right: 5px !important;
         padding-left: 5px !important;
       }
     }
-    .mat-expansion-panel{
+    .mat-expansion-panel {
       display: grid !important;
       width: 100%;
     }
   }
-  .res-td{
+  .res-td {
     display: inline-table;
     width: max-content;
-    span{
+    span {
       font-size: 10px;
       white-space: nowrap;
       font-weight: normal;
-      div, .mat-cell{
+      div,
+      .mat-cell {
         font-weight: normal;
-        padding-right:10px;
+        padding-right: 10px;
       }
     }
   }
-  .mat-table .mat-cell{
-    height:auto;
+  .mat-table .mat-cell {
+    height: auto;
     margin-top: auto;
   }
-  .mat-expansion-panel-header{
+  .mat-expansion-panel-header {
     min-height: auto !important;
     height: auto !important;
     max-height: auto !important;
@@ -415,9 +415,15 @@ div.limited-character.universal {
   // .mat-expansion-indicator{
   //   margin-top: -50px;
   // }
-  .fr-row{
+  .fr-row {
     text-align: left;
     width: auto;
     overflow: visible;
   }
+}
+
+.flex-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
