--- a/src/app/features/verify-email/verify-email.component.html
+++ b/src/app/features/verify-email/verify-email.component.html
@@ -8,7 +8,7 @@
         </div>
       </div>
       <div class="col-md-12 text-center">
-        <span>your email address was successfully verified </span>
+        <span>Your email address was successfully verified </span>
       </div>
       <div class="col-md-12 text-center p-t-20">
         <a [routerLink]="['/auth/login']" class="cursor main-color"> Sign In</a>
