--- a/src/app/features/po/po-table/po-table.component.html
+++ b/src/app/features/po/po-table/po-table.component.html
@@ -339,7 +339,7 @@
           <ng-template #viewAdditonalBlock>
             <div class="row width-100">
               <div class="col-xs-9"></div>
-              <div class="col-xs-3 p-r-10 fontsize-15-px text-right">
+              <div class="col-xs-3 p-r-10 fontsize-15-px text-left">
                 <span class="p-r-0">
                   <span class="light-grey">Other Cost:</span>
                   <span class="p-r-5 light-grey">
