--- a/src/app/features/rfq/rfq-view/rfq-view.component.html
+++ b/src/app/features/rfq/rfq-view/rfq-view.component.html
@@ -6,17 +6,17 @@
       <div class="col-md-12">
         <!-- first row -->
         <div class="row p-t-20">
-          <div class="col-xs-4 col-md-4">
+          <div class="col-xs-6 col-md-4" [ngClass]="isMobile ? 'font-size14' : '' ">
             <div class="p-t-10">
-              <label class="text-bold">RFQ Name: </label>
+              <label class="text-bold" [ngClass]="isMobile ? 'd-block mb-1' : '' ">RFQ Name: </label>
               {{ rfqDetails.rfqName }}
             </div>
           </div>
-          <div class="col-xs-4 col-md-4 p-t-10 text-left">
-            <label class="text-bold">RFQ End Date: </label>
+          <div class="col-xs-6 col-md-4 p-t-10 text-left" [ngClass]="isMobile ? 'font-size14' : '' ">
+            <label class="text-bold" [ngClass]="isMobile ? 'd-block mb-1' : '' ">RFQ End Date: </label>
             {{ rfqDetails.dueDate | date: "dd-MMM-yyy" }}
           </div>
-          <div class="col-xs-4 p-l-0 p-t-10 p-b-25 text-right"
+          <div class="col-xs-12 p-l-0 p-t-10 p-b-25 text-right" [ngClass]="isMobile ? 'mt-2' : '' "
             *ngIf="rfqDetails.rfqCurrency != null && rfqDetails.rfqCurrency.exchangeCurrencyName != null">
             <span class="base-currency p-l-5 p-r-5 p-t-10 p-b-10">
               <span class="font-size-vary-grn color-grey">
@@ -37,7 +37,7 @@
                 class="p-l-5 info-icon info-tootip"><img src="./../../../../assets/images/i_icon.png"
                   class="img-responsive" />
                 <span class="info-tootip__content rt-0">
-                  <div class="tooltip-table ml-0">
+                  <div class="tooltip-table ml-0" [ngClass]="isMobile ? 'mr-2 p-10 font-size14' : '' ">
                     <div class="row text-center color-grey text-semi-bold p-l-5 p-r-5">
                       Supplier will have to submit the quote in this selected currency
                     </div>
