--- a/src/app/features/rfq/rfq-view/rfq-view.component.html
+++ b/src/app/features/rfq/rfq-view/rfq-view.component.html
@@ -16,26 +16,22 @@
             <label class="text-bold">RFQ End Date: </label>
             {{ rfqDetails.dueDate | date: "dd-MMM-yyy" }}
           </div>
-          <div class="col-xs-4 p-l-0 p-t-10 p-b-25 text-right"
-            *ngIf="rfqDetails.rfqCurrency != null && rfqDetails.rfqCurrency.exchangeCurrencyName != null">
+          <div class="col-xs-4 p-l-0 p-t-10 p-b-25 text-right" *ngIf="rfqDetails.rfqCurrency != null && rfqDetails.rfqCurrency.exchangeCurrencyName != null">
             <span class="base-currency p-l-5 p-r-5 p-t-10 p-b-10">
               <span class="font-size-vary-grn color-grey">
-                <img width="25px" *ngIf="rfqDetails.rfqCurrency.exchangeCurrencyFlag"
-                  [src]="rfqDetails.rfqCurrency.exchangeCurrencyFlag" />
+                <img width="25px" *ngIf="rfqDetails.rfqCurrency.exchangeCurrencyFlag" [src]="rfqDetails.rfqCurrency.exchangeCurrencyFlag" />
                 {{ rfqDetails.rfqCurrency.exchangeCurrencyName }}
               </span>
               <span class="p-l-5"> = </span>
               <span class="p-l-5 color-6d6a6a color-grey"> {{ rfqDetails.rfqCurrency.exchangeValue }} </span>
               <span class="p-l-5 color-grey">
-                <img width="25px" *ngIf="rfqDetails.rfqCurrency.primaryCurrencyFlag"
-                  [src]="rfqDetails.rfqCurrency.primaryCurrencyFlag" />
+                <img width="25px" *ngIf="rfqDetails.rfqCurrency.primaryCurrencyFlag" [src]="rfqDetails.rfqCurrency.primaryCurrencyFlag" />
                 {{ rfqDetails.rfqCurrency.primaryCurrencyName }}
               </span>
             </span>
             <div class="display-inline-block p-l-5">
-              <span *ngIf="rfqDetails.rfqCurrency != null && rfqDetails.rfqCurrency.exchangeCurrencyName != null"
-                class="p-l-5 info-icon info-tootip"><img src="./../../../../assets/images/i_icon.png"
-                  class="img-responsive" />
+              <span *ngIf="rfqDetails.rfqCurrency != null && rfqDetails.rfqCurrency.exchangeCurrencyName != null" class="p-l-5 info-icon info-tootip"
+                ><img src="./../../../../assets/images/i_icon.png" class="img-responsive" />
                 <span class="info-tootip__content rt-0">
                   <div class="tooltip-table ml-0">
                     <div class="row text-center color-grey text-semi-bold p-l-5 p-r-5">
@@ -66,7 +62,7 @@
                 <label for="email" class="word-break-all">{{ supplier.email }}</label>
               </div>
               <div class="col-md-12">
-                <label for="phoneNumber" class="word-break-all">{{ supplier.contact_no }}</label>
+                <label for="phoneNumber" class="word-break-all"> {{ supplier.countryCallingCode }}-{{ supplier.contact_no }} </label>
               </div>
             </mat-card>
           </div>
@@ -74,7 +70,8 @@
       </div>
     </div>
 
-    <mat-card class="m-b-10 p-b-10" *ngIf="this.rfqDetails.terms">Payment Terms:
+    <mat-card class="m-b-10 p-b-10" *ngIf="this.rfqDetails.terms"
+      >Payment Terms:
       <span classs="p-l-15">
         {{ this.rfqDetails.terms.termsDesc.trim() === "Others" ? this.rfqDetails.terms.otherDesc : this.rfqDetails.terms.termsDesc }}
       </span>
