--- a/src/app/features/first-login/update-info/update-info.component.html
+++ b/src/app/features/first-login/update-info/update-info.component.html
@@ -112,9 +112,9 @@
                   </div>
                 </div>
                 <mat-form-field class="border-input w-100">
-                  <input matInput type="text" placeholder="Pincode" formControlName="orgPincode" />
+                  <input matInput type="number" placeholder="Pincode" formControlName="orgPincode" />
                 </mat-form-field>
-                <mat-error *ngIf="userInfoForm.controls['orgPincode'].errors?.maxlength && userInfoForm.controls['orgPincode'].touched">
+                <mat-error *ngIf="userInfoForm.controls['orgPincode'].errors?.max && userInfoForm.controls['orgPincode'].touched">
                   maximum characters allowed is 6
                 </mat-error>
                 <small *ngIf="userInfoForm.controls['orgPincode'].errors?.maxlength && userInfoForm.controls['orgPincode'].touched" class="signupForm-error-msg"></small>
