--- a/src/app/features/global-store/project-wise/project-wise.component.html
+++ b/src/app/features/global-store/project-wise/project-wise.component.html
@@ -1,4 +1,4 @@
-<div class="col-xs-3 border-input" *ngIf="this.newProjectData.length && this.newProjectData.length > 0">
+<div class="col-xs-12 col-md-3 border-input" *ngIf="this.newProjectData.length && this.newProjectData.length > 0">
   <mat-form-field class="example-form-field border-input">
     <input matInput placeholder="Search Project" type="search" [(ngModel)]="searchProject" />
     <button mat-button matSuffix mat-icon-button>
@@ -7,19 +7,22 @@
   </mat-form-field>
 </div>
 
-<mat-accordion displayMode="flat" multi class="mat-table" *ngIf="this.newProjectData.length && this.newProjectData.length > 0">
+<mat-accordion displayMode="flat" multi class="mat-table res-table"
+  *ngIf="this.newProjectData.length && this.newProjectData.length > 0">
   <section matSort class="mat-elevation-z2 mat-header-row blue-background-color-color-white-section">
-    <span class="mat-header-cell maxwidth-14 material-Name" mat-sort-header="name"><span>Material Name</span> </span>
-    <span class="mat-header-cell maxwidth-14" mat-sort-header="estimatedQuantity">Estimated Quantity</span>
-    <span class="mat-header-cell maxwidth-14" mat-sort-header="indentedQuantity">Indented Quantity</span>
-    <span class="mat-header-cell maxwidth-14" mat-sort-header="requiredDate">Required Date</span>
-    <span class="mat-header-cell maxwidth-14" mat-sort-header="deliveredQuantity">Delivered Quantity</span>
-    <span class="mat-header-cell maxwidth-14" mat-sort-header="awardedQuantity">Awarded Quantity</span>
-    <span class="mat-header-cell maxwidth-14" mat-sort-header="availableQuantity">Available Stock</span>
+    <span class="mat-header-cell maxwidth-20 material material-Name" mat-sort-header="name"><span>Material Name</span>
+    </span>
+    <span class="mat-header-cell maxwidth-20 material" mat-sort-header="estimatedQuantity">Estimated Quantity</span>
+    <span class="mat-header-cell maxwidth-20 material" mat-sort-header="indentedQuantity">Indented Quantity</span>
+    <span class="mat-header-cell maxwidth-20 material" mat-sort-header="requiredDate">Required Date</span>
+    <span class="mat-header-cell maxwidth-20 material" mat-sort-header="deliveredQuantity">Delivered Quantity</span>
+    <span class="mat-header-cell maxwidth-20 material" mat-sort-header="awardedQuantity">Awarded Quantity</span>
+    <span class="mat-header-cell maxwidth-20 material" mat-sort-header="availableQuantity">Available Stock</span>
   </section>
 
-  <div>
-    <mat-expansion-panel *ngFor="let project of newProjectData | SearchPipe: searchProject:'ProjectGlobal':'projectName'" class="myPanel">
+  <div class="res-td">
+    <mat-expansion-panel
+      *ngFor="let project of newProjectData | SearchPipe: searchProject:'ProjectGlobal':'projectName'" class="myPanel">
       <mat-expansion-panel-header class="mat-row material-row">
         <span class="mat-cell">{{ project.ProjectGlobal.projectName }}</span>
       </mat-expansion-panel-header>
@@ -32,26 +35,22 @@
             </div>
           </span>
 
-          <span class="mat-cell maxwidth-14 text-center"
-            >{{ material.GlobalMaterial.estimatedQty }} <span class="p-l-5">{{ material.GlobalMaterial.materialUnit }}</span></span
-          >
-          <span class="mat-cell maxwidth-14 text-center"
-            >{{ material.GlobalMaterial.sum }} <span class="p-l-5">{{ material.GlobalMaterial.materialUnit }}</span></span
-          >
-          <span class="mat-cell maxwidth-14 text-center"> {{ material.GlobalMaterial.nearDueDate | date: "dd MMM yyy" }}</span>
-          <span class="mat-cell maxwidth-14 text-center"
-            >{{ material.GlobalMaterial.deliveredQty != null ? material.GlobalMaterial.deliveredQty : 0 }}
-            <span class="p-l-5">{{ material.GlobalMaterial.materialUnit }}</span></span
-          >
-          <span class="mat-cell maxwidth-14 text-center"
-            >{{ material.GlobalMaterial.issuedQty != null ? material.GlobalMaterial.issuedQty : 0 }} <span class="p-l-5">{{ material.GlobalMaterial.materialUnit }}</span></span
-          >
-          <span class="mat-cell maxwidth-14 text-center"
-            >{{
+          <span class="mat-cell maxwidth-14 text-center">{{ material.GlobalMaterial.estimatedQty }} <span
+              class="p-l-5">{{ material.GlobalMaterial.materialUnit }}</span></span>
+          <span class="mat-cell maxwidth-14 text-center">{{ material.GlobalMaterial.sum }} <span
+              class="p-l-5">{{ material.GlobalMaterial.materialUnit }}</span></span>
+          <span class="mat-cell maxwidth-14 text-center">
+            {{ material.GlobalMaterial.nearDueDate | date: "dd MMM yyy" }}</span>
+          <span
+            class="mat-cell maxwidth-14 text-center">{{ material.GlobalMaterial.deliveredQty != null ? material.GlobalMaterial.deliveredQty : 0 }}
+            <span class="p-l-5">{{ material.GlobalMaterial.materialUnit }}</span></span>
+          <span
+            class="mat-cell maxwidth-14 text-center">{{ material.GlobalMaterial.issuedQty != null ? material.GlobalMaterial.issuedQty : 0 }}
+            <span class="p-l-5">{{ material.GlobalMaterial.materialUnit }}</span></span>
+          <span class="mat-cell maxwidth-14 text-center">{{
               material.GlobalMaterial.deliveredQty != null ? material.GlobalMaterial.deliveredQty - (material.GlobalMaterial.issuedQty ? material.GlobalMaterial.issuedQty : 0) : 0
             }}
-            <span class="p-l-5">{{ material.GlobalMaterial.materialUnit }}</span></span
-          >
+            <span class="p-l-5">{{ material.GlobalMaterial.materialUnit }}</span></span>
         </mat-expansion-panel-header>
 
         <ng-container *ngIf="material.IndentMaterial">
@@ -59,8 +58,7 @@
             <mat-expansion-panel-header class="mat-row">
               <span class="mat-cell maxwidth-14 text-center"></span>
               <span class="mat-cell maxwidth-14 text-center"></span>
-              <span class="mat-cell maxwidth-14 text-center"
-                >{{ indent.quantity }}
+              <span class="mat-cell maxwidth-14 text-center">{{ indent.quantity }}
                 <span class="p-l-5">{{ material.GlobalMaterial.materialUnit }}</span>
               </span>
               <span class="mat-cell maxwidth-14 text-center">{{ indent.dueDate | date: "dd MMM yyy" }}</span>
