--- a/src/assets/scss/pages/common.scss
+++ b/src/assets/scss/pages/common.scss
@@ -330,47 +330,6 @@ div.limited-character.universal {
   }
 }
 
-@media only screen and (max-width: 600px) {
-  .res-table {
-    overflow-x: auto;
-    display: flex;
-    section {
-      display: inline-flex !important;
-      span {
-        display: contents !important;
-        font-size: 10px;
-      }
-    }
-    .mat-expansion-panel {
-      display: grid !important;
-      width: 100%;
-    }
-  }
-  .res-td {
-    display: inline-table;
-    width: max-content;
-    span {
-      font-size: 10px;
-    }
-  }
-  .mat-table .mat-cell {
-    height: auto;
-    margin-top: auto;
-  }
-  .mat-expansion-panel-header {
-    min-height: auto !important;
-    height: auto !important;
-    max-height: auto !important;
-  }
-  // .mat-expansion-indicator{
-  //   margin-top: -50px;
-  // }
-  .fr-row {
-    text-align: left;
-    width: auto;
-    overflow: visible;
-  }
-}
 
 @media only screen and (max-width: 600px) {
   .res-table {
@@ -380,8 +339,8 @@ div.limited-character.universal {
       display: inline-flex !important;
       span {
         font-size: 10px;
-        padding-right: 5px !important;
-        padding-left: 5px !important;
+        padding-right: 2px !important;
+        padding-left: 2px !important;
       }
     }
     .mat-expansion-panel {
@@ -406,6 +365,8 @@ div.limited-character.universal {
   .mat-table .mat-cell {
     height: auto;
     margin-top: auto;
+    border-bottom: 0px;
+    text-align: left;
   }
   .mat-expansion-panel-header {
     min-height: auto !important;
@@ -429,4 +390,8 @@ ngx-mat-drp-picker-overlay{
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.d-grid{
+  display: grid !important;
 }
