--- a/src/assets/scss/pages/common.scss
+++ b/src/assets/scss/pages/common.scss
@@ -330,7 +330,6 @@ div.limited-character.universal {
   }
 }
 
-
 @media only screen and (max-width: 600px) {
   .res-table {
     overflow-x: auto;
@@ -383,8 +382,8 @@ div.limited-character.universal {
   }
 }
 
-ngx-mat-drp-picker-overlay{
-  overflow: auto;  
+ngx-mat-drp-picker-overlay {
+  overflow: auto;
 }
 .flex-center {
   display: flex;
@@ -392,6 +391,10 @@ ngx-mat-drp-picker-overlay{
   align-items: center;
 }
 
-.d-grid{
+.d-grid {
   display: grid !important;
+}
+
+.overflow-break {
+  overflow-wrap: break-word !important;
 }
