--- a/src/app/shared/dialogs/video-video/view-video.component.html
+++ b/src/app/shared/dialogs/video-video/view-video.component.html
@@ -1,10 +1,10 @@
- <div class="header-add-edit-dialog">
-      <h1 mat-dialog-title>Material Manager Product Tutorial</h1>
-      <button type="button" class="close" (click)="close()" aria-label="Close">
-        <span aria-hidden="true">×</span>
-      </button>
-  </div>
-   <div class="col-sm-12  padding-for-dialog-after-header text-align-center">
-      <iframe class="buildsupply-material-video" autoplay src="https://www.youtube.com/embed/CXrwPgB2guQ?autoplay=1&enablejsapi=1" allowfullscreen alt="Failed to load video">
-      </iframe>
-   </div>
+<div class="header-add-edit-dialog">
+  <h1 mat-dialog-title>Material Manager Product Tutorial</h1>
+  <button type="button" class="close" (click)="close()" aria-label="Close">
+    <span aria-hidden="true">×</span>
+  </button>
+</div>
+<div class="col-sm-12  padding-for-dialog-after-header text-align-center" *ngIf="safeURL">
+  <iframe class="buildsupply-material-video" autoplay [src]='safeURL' allowfullscreen frameborder="0">
+  </iframe>
+</div>
