--- a/src/app/features/first-login/update-info/update-info.component.html
+++ b/src/app/features/first-login/update-info/update-info.component.html
@@ -64,7 +64,7 @@
                 <div class="row">
                   <div class="col-xs-5">
                     <mat-form-field class="width100Percent border-select mat-form-field-flex-mm-padding">
-                      <mat-label>*Country Code</mat-label>
+                      <mat-label>Country Code</mat-label>
                       <mat-select formControlName="countryCode">
                         <div class="display-flex">
                           <input
@@ -99,7 +99,7 @@
                   </div>
                   <div class="col-xs-7 p-t-3">
                     <mat-form-field class="border-input w-100">
-                      <input matInput type="text" placeholder="Phone No." formControlName="contactNo" />
+                      <input matInput type="text" placeholder="Phone No.*" formControlName="contactNo" />
                     </mat-form-field>
                     <mat-error *ngIf="userInfoForm.controls['contactNo'].errors && (userInfoForm.controls['contactNo'].dirty || userInfoForm.controls['contactNo'].touched)">
                       <mat-error *ngIf="userInfoForm.controls['contactNo'].hasError('required')">
