--- a/src/assets/scss/base/spacing.scss
+++ b/src/assets/scss/base/spacing.scss
@@ -108,6 +108,8 @@ $spaceamounts: (
   135,
   150,
   180,
+  230,
+  250,
   300,
   350
 ); // Adjust this to include the pixel amounts you need.
