--- a/src/app/features/profile/profile.component.html
+++ b/src/app/features/profile/profile.component.html
@@ -97,7 +97,7 @@
                       </mat-select>
                     </mat-form-field>
                   </div>
-                  <div class="col-xs-7 p-t-3">
+                  <div class="col-xs-7 p-t-1">
                     <mat-form-field class="border-input w-100">
                       <input matInput type="text" placeholder="Phone No." formControlName="contactNo" />
                     </mat-form-field>
@@ -117,6 +117,9 @@
                 </mat-form-field>
                 <mat-error *ngIf="userInfoForm.controls['orgPincode'].errors?.max && userInfoForm.controls['orgPincode'].touched">
                   maximum characters allowed is 6
+                </mat-error>
+                <mat-error *ngIf="userInfoForm.controls['orgPincode'].hasError('pattern') && userInfoForm.controls['orgPincode'].touched">
+                  Only Number Allowed
                 </mat-error>
 
                 <mat-form-field class="border-select w-100" *ngIf="users.roleName != 'l3'">
