--- a/src/app/features/rfq-supplier-template/rfq-supplier-add-address/rfq-supplier-add-address.component.html
+++ b/src/app/features/rfq-supplier-template/rfq-supplier-add-address/rfq-supplier-add-address.component.html
@@ -160,7 +160,9 @@
                     class="form-error-msg"> Pincode is required </small>
                   <!-- <small *ngIf="form.controls['pinCode'].hasError('pattern') && form.controls['pinCode'].touched"
                     class="form-error-msg"> Enter Valid pinCode</small> -->
-                  <small
+
+
+                  <!-- <small
                     *ngIf="form.controls['pinCode'].touched && (!validPincode) && form.controls['pinCode'].hasError('pattern')"
                     class="error-msg">
                     Enter Valid Pincode
@@ -169,7 +171,22 @@
                     *ngIf="form.controls['pinCode'].touched && (!validPincode) && !form.controls['pinCode'].hasError('pattern') && !validPincode && (pincode.value.length > 0) "
                     class="error-msg">
                     Enter Valid Pincode
-                  </small>
+                  </small> -->
+
+
+                  <ng-container *ngIf="form.controls['pinCode'].touched">
+                    <small *ngIf="form.controls['pinCode'].hasError('required') && pincodeLength<=0"
+                      class="form-error-msg p-l-15">
+                      Pincode is required
+                    </small>
+                    <!-- <small *ngIf="newAddressForm.controls['pinCode'].hasError('pattern') && newAddressForm.controls['pinCode'].touched"
+                                      class="form-error-msg p-l-15"> Enter Valid Pincode</small> -->
+                    <small *ngIf="(!validPincode) && (pincodeLength>0)" class="error-msg p-l-15">
+                      Enter Valid Pincode
+                    </small>
+                  </ng-container>
+
+
                 </mat-form-field>
               </div>
 
